--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://djamper103.github.io/Shop",
   "name": "shop",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "connect": "^3.7.0",
     "firebase": "^8.5.0",
+    "gh-pages": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -22,6 +24,8 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
