--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect": "^3.7.0",
     "firebase": "^8.5.0",
     "gh-pages": "^3.2.0",
+    "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
@@ -26,9 +27,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "server": "json-server --watch db.json",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
