--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
     "web-vitals": "^1.1.1"
   },
