--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.15.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "connect": "^3.7.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase": "^8.5.0",
     "gh-pages": "^3.2.0",
     "json-server": "^0.16.3",
@@ -24,14 +30,18 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
+    "stripe": "^8.154.0",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.10",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "set PORT=3001 && react-scripts start",
+    "start": "set PORT=3003 && react-scripts start",
     "build": "react-scripts build",
     "server": "json-server --watch db.json",
+    "serverCart": "server --watch cartServer.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
