--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "start": "set PORT=3003 && react-scripts start",
     "build": "react-scripts build",
     "server": "json-server --watch db.json",
-    "serverCart": "cartServer.js",
+    "serverCart": "node cartServer.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
