--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect": "^3.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-plugin-react": "^7.24.0",
     "express": "^4.17.1",
     "firebase": "^8.5.0",
     "gh-pages": "^3.2.0",
