--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "deploy": "gh-pages -d build",
     "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
-    "server": "json-server --watch db.json --port 3002",
+    "server": "json-server --watch db.json",
     "serverCart": "node cartServer.js",
     "eject": "react-scripts eject"
   },
