--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-spinners": "^0.10.6",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^7.0.4",
+    "rebase": "^0.3.0",
     "redux": "^4.1.0",
     "stripe": "^8.154.0",
     "uuid": "^8.3.2",
