--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gh-pages": "^3.2.0",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21",
+    "mirage": "^0.0.7",
+    "miragejs": "^0.1.41",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
