--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^8.2.0",
     "eslint-plugin-react": "^7.24.0",
     "express": "^4.17.1",
-    "firebase": "^8.5.0",
+    "firebase": "^8.7.0",
     "gh-pages": "^3.2.0",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21",
@@ -36,7 +36,7 @@
     "redux": "^4.1.0",
     "stripe": "^8.154.0",
     "uuid": "^8.3.2",
-    "uuidv4": "^6.2.10",
+    "uuidv4": "^6.2.11",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -44,7 +44,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "serverCart": "node cartServer.js",
+    "server": "node cartServer.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
