--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "connect": "^3.7.0",
+    "cordova-plugin-network-information": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-plugin-react": "^7.24.0",
