--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
+    "com.payumoney.sdkui.cordova": "^1.2.1",
     "connect": "^3.7.0",
     "cordova-plugin-network-information": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-plugin-react": "^7.24.0",
     "express": "^4.17.1",
-    "firebase": "^8.7.0",
+    "firebase": "^8.7.1",
     "gh-pages": "^3.2.0",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21",
@@ -33,6 +34,7 @@
     "react-spinners": "^0.10.6",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^7.0.4",
+    "react.cordova": "^1.2.1",
     "rebase": "^0.3.0",
     "recharts": "^2.0.9",
     "redux": "^4.1.0",
