--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "eslint-plugin-react": "^7.24.0",
     "express": "^4.17.1",
     "firebase": "^8.7.1",
-    "gh-pages": "^3.2.0",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21",
     "mirage": "^0.0.7",
@@ -68,5 +67,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
