--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "cordova-plugin-network-information": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.30.1",
     "express": "^4.17.1",
     "firebase": "^8.7.1",
-    "json-server": "^0.16.3",
+    "json-server": "^0.4.2",
     "lodash": "^4.17.21",
     "miragejs": "^0.1.41",
     "react": "^17.0.2",
@@ -28,7 +28,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-spinners": "^0.10.6",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^7.0.4",
@@ -67,6 +67,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.7.1"
   }
 }
